syntax = "proto3";
option go_package = ".PostProto";
package post;

service post{
  rpc NewPost (NewPostRequest) returns (NewPostResponse);
  rpc GetPost (PostID) returns (PostInfoResponse);
  rpc PostList (PostFilterRequest) returns (PostListResponse);
  rpc UpdatePost (UpdatePostRequest) returns (Empty);
  rpc DeletePost (DeletePostRequest) returns (Empty);

  rpc NewLike (NewLikeRequest) returns (Empty);
  rpc PostListByLike (LikeListRequest) returns (PostListResponse);
  rpc DeleteLike (DeleteLikeRequest) returns (Empty);

  rpc NewFav (NewFavRequest) returns (Empty);
  rpc PostListByFav (FavListRequest) returns (PostListResponse);
  rpc DeleteFav (DeleteFavRequest) returns (Empty);

  rpc NewComment (NewCommentRequest) returns (NewCommentResponse);
  rpc CommentList (CommentFilterRequest) returns (CommentListResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (Empty);

  rpc GetNoticeList (NoticeFilterRequest) returns (NoticeListResponse);
  rpc CheckNotice (CheckNoticeRequest) returns (CheckNoticeResponse);
}

message CheckNoticeResponse {
  bool NewNotices = 1;
}

message CheckNoticeRequest {
  int32 UserId = 1;
}

message NoticeFilterRequest {
  int32 UserId = 1;
  int32 Type = 2;
  int32 PageSize = 3;
  int32 PageNum = 4;
}

message NoticeInfoResponse {
  int32 Id = 1;
  int32 UserId = 2;
  int32 OwnerId = 3;
  int32 Type = 4;
  int32 PostId = 5;
  string PostTitle = 6;
}

message NoticeListResponse {
  int64 total = 1;
  repeated NoticeInfoResponse data = 2;
}

message DeleteCommentRequest {
  int32 Id = 1;
}

message CommentListResponse {
  int32 Total = 1;
  repeated CommentInfoResponse data = 2;
}

message CommentInfoResponse {
  int32 UserId = 1;
  int32 PostId = 2;
  int32 ParentCommentId = 3;
  string Content = 4;
  int32 Id = 5;
}

message CommentFilterRequest {
  int32 UserId = 1;
  int32 PostId = 2;
  int32 ParentCommendId = 3;
  int32 PageNum = 4;
  int32 PageSize = 5;
}

message NewCommentResponse {
  int32 Id = 1;
}

message NewCommentRequest {
  int32 UserId = 1;
  int32 PostId = 2;
  int32 ParentCommentId = 3;
  string Content = 4;
}

message DeleteFavRequest {
  int32 UserId = 1;
  int32 PostId = 2;
}

message FavListRequest {
  int32 UserId = 1;
  int32 PageNum = 2;
  int32 PageSize = 3;
}

message NewFavRequest {
  int32 UserId = 1;
  int32 PostId = 2;
}

message DeleteLikeRequest {
  int32 UserId = 1;
  int32 PostId = 2;
}

message LikeListRequest {
  int32 UserId = 1;
  int32 PageNum = 2;
  int32 PageSize = 3;
}

message NewLikeResponse {
  int32 Id = 1;
}

message NewLikeRequest {
  int32 PostId = 1;
  int32 UserId = 2;
}

message DeletePostRequest {
  int32 Id = 1;
}

message UpdatePostRequest {
  int32 Id = 1;
  string Content = 2;
  string Title = 3;
  string Desc = 4;
  string Image = 5;
}

message PostListResponse {
  int32 Total = 1;
  repeated PostItemResponse data = 2;
}

message PostItemResponse {
  int32 UserId = 1;
  string Category = 2;
  string Title = 3;
  string Desc = 4;
  string Image = 5;
  int32 Id = 6;
  int32 LikeNum = 7;
  int32 FavNum = 8;
  int32 CommentNum = 9;
}

message PostFilterRequest {
  int32 UserId = 1;
  string Title = 2;
  repeated string Category = 3;
  int32 PageNum = 4;
  int32 PageSize = 5;
}

message PostInfoResponse {
  int32 UserId = 1;
  string Category = 2;
  string Content = 3;
  string Title = 4;
  string Desc = 5;
  string Image = 6;
  int32 Id = 7;
  int32 LikeNum = 8;
  int32 FavNum = 9;
  int32 CommentNum = 10;
}

message PostID {
  int32 Id = 1;
}

message NewPostResponse {
  int32 Id = 1;
}

message NewPostRequest {
  int32 UserId = 1;
  string Category = 2;
  string Content = 3;
  string Title = 4;
  string Desc = 5;
  string Image = 6;
}

message Empty {}